--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,15 @@
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"/"
-        }
+            
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+                "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Authorization"
+              },
+              "methods": ["OPTIONS", "GET", "POST", "PUT", "DELETE"]
+         }
+        
     ]
 
 }
