--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
     ],
     "routes":[
         {
-            "src":"/(:page)",
-            
+            "src":"/(.*)",
+            "dest": "/",
             "headers": {
                 "Access-Control-Allow-Origin": "*",
                 "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
